[package]
name = "charlie_buffalo"
version = "0.1.0"
authors = ["Jimskapt <rami.programmer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "full_demo"

[dependencies]
serde = { version = "^1", features = ["derive"] }
chrono = "^0"
rmp-serde = "^0"
serde_json = "^1"
