[package]
name = "charlie_buffalo"
version = "1.0.1"
authors = ["Jimskapt <rami.programmer@gmail.com>"]
description = "A library to join attributes on system logs."
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Jimskapt/charlie_buffalo"
keywords = ["log", "logger", "logging", "attributes", "concurrent"]
categories = ["development-tools::debugging"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "full_demo"

[dependencies]
serde = { version = "^1", features = ["derive"] }

[dev-dependencies]
chrono = "^0"
rmp-serde = "^0"
serde_json = "^1"
